Changelog
=========

0.2.2 (unreleased)
------------------

- Added more improvements about i18n [macagua]

- Updated screenshot for mobile theming control panel [macagua]

- Added i18n support [macagua]

- Added Spanish translation [macagua]

- Added some improvements about the package documentation [macagua]

- Added more strings classifiers items for this package [macagua]

0.2.1 (2014-11-21)
------------------

- Added ‘redirect to full url’ [espenmn]


0.2 (2014-07-01)
----------------

- Added GenericSetup import/export profiles.


0.1 (2014-06-04)
----------------

- Initial version