@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<componentregistry>
+  <adapters>
+    <adapter
+      name="zettwerk_mobiletheming_transform"
+      provides="plone.transformchain.interfaces.ITransform"
+      factory="zettwerk.mobiletheming.transform.MobileThemeTransform"
+      for="zope.interface.Interface plone.app.theming.interfaces.IThemingLayer"
+      remove="True"
+    />
+  </adapters>
+</componentregistry>
