@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="zettwerk.mobiletheming">
+
+    <configlet action_id="mobilesettings" appId="mobilesettings"
+        remove="True" delete="True">
+        <permission>Manage portal</permission>
+    </configlet>
+
+</object>
