@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+
+    <javascript id="mobile-redirect.js"
+        remove="true"
+        />
+
+</object>
