@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<metadata>
+  <version>0.2.2</version>
+</metadata>
