@@ -4,6 +4,8 @@ Changelog
 0.2.2 (unreleased)
 ------------------
 
+- Added the GenericSetup uninstall profile [macagua]
+
 - Added more improvements about i18n [macagua]
 
 - Updated screenshot for mobile theming control panel [macagua]
